<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lollipop Showcase</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="action_settings">Settings</string>

    <string name="activity_detail_title">DetailActivity</string>

    <string name="drawer_switch">SwitchSample</string>
    <string name="drawer_opensource">Open Source</string>


    <string name="dialog_nointernet">No internet connection!</string>
    <string name="dialog_uploading">Progress Sample&#8230;</string>
    <string name="dialog_processinganduploading">Showing a sample progress. Please be patient! (This does nothing. Just waiting 100ms / application)</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_writting">Writting</string>




    <string name="black">黑色</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="colorsetting">颜色设置</string>
    <string name="pensize">笔大小</string>

    <string name="clear">擦除</string>
    <string name="redo">恢复</string>
    <string name="undo">撤销</string>
</resources>
